# metricq-wizard-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  docker.yml
api_doc/: add_source_config_item.yaml  add_source_metrics_for_config_item.yaml  delete_source_config_item.yaml  get_client_list.yaml  get_source.yaml  get_source_config.yaml  get_source_config_item.yaml  get_source_config_items.yaml  get_source_list.yaml  get_source_metrics_for_config_item.yaml  get_source_raw_config.yaml  reconfigure_client.yaml  reconfigure_source.yaml  save_config_and_reconfigure_source.yaml  save_source_config.yaml  save_source_raw_config.yaml  swagger_base.yaml  update_source_config.yaml  update_source_config_item.yaml
api_doc/transformer/: get_combinator_metric_expression.yaml  patch_combinator_metric_expression.yaml  put_combinator_metric_expression.yaml
app/: db.py  main.py  settings.py  views.py
app/api/: models.py  views.py
app/metricq/: configurator.py  source_plugin.py
metricq-wizard-plugin-http/: setup.py
metricq-wizard-plugin-http/metricq_wizard_plugin_http/: __init__.py  plugin.py
metricq-wizard-plugin-source-bacnet/: setup.py
metricq-wizard-plugin-source-bacnet/metricq_wizard_plugin_source_bacnet/: __init__.py  plugin.py
metricq-wizard-plugin-source-http/: setup.py
metricq-wizard-plugin-source-http/metricq_wizard_plugin_source_http/: __init__.py  plugin.py
metricq-wizard-plugin-source-lmgd/: setup.py
metricq_wizard_backend/: main.py  settings.py
metricq_wizard_backend/api/: models.py
(+23 files in other folders)
