[metadata]
name = metricq-wizard-backend
author = TU Dresden
description = The server backend for the wizard
long_description = file: README.md
long_description_content_type = text/markdown
url = https://example.com/metricq-example
license = GPL3
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8
setup_requires =
    setuptools_scm
install_requires =
    metricq ~= 3.0
    aiohttp~=3.7
    aiohttp-cors~=0.7.0
    aiohttp-jinja2~=1.2.0
    aiohttp-session[secure]~=2.9
    aiohttp-swagger~=1.0.14
    pydantic~=1.0
    aiocouch
    aiocache

[options.extras_require]
lint =
    black
    check-manifest
    flake8 ~= 3.8
    flake8-bugbear
    isort ~= 5.0
    pre-commit>=2.9.2
dev =
    %(lint)s
    aiohttp-debugtoolbar~=0.5.0
    aiohttp-devtools~=0.13.1

[flake8]
# Tell flake8 which packages are part of your application:
application-import-names = metricq_wizard_backend
# This is the black default:
max-line-length = 88
extend-exclude =
    .pytest_cache,
    # Add additional directories here to exclude from checking
    ...
# Rules to check for
select =
    # Regular flake8 rules
    C, E, F, W
    # flake8-bugbear rules
    B
    # pep8-naming rules
    N
# Rules to ignore.  Add a reason why.
ignore =
    # E203: whitespace before ':' (not PEP8 compliant)
    E203
    # E501: line too long (replaced by B950)
    E501
    # W503: line break before binary operator (not PEP8 compliant)
    W503